--- a/my-solutions.css
+++ b/my-solutions.css
@@ -90,3 +90,34 @@ body {
     border-radius: 20px;
     transform: scale(1.25);
 }
+
+/* ANIMATIONS */
+/* EX 10 */
+.ex-10-icon {
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    from {transform: rotate(0);}
+    to {transform: rotate(360deg);}
+}
+
+/* EX 11 */
+.ex-11-icon:hover {
+    animation: partial-spin 3s linear;
+}
+
+@keyframes partial-spin {
+    0% {transform: rotate(0);}
+    80% {transform: rotate(270deg);}
+    100% {transform: rotate(0);}
+}
+
+/* EX 12 */
+.ex-12-icon:hover {
+
+}
+
+@keyframes partial-spin {
+    
+}
