the last one, fear approaching...

--- a/my-solutions.css
+++ b/my-solutions.css
@@ -114,10 +114,22 @@ body {
 }
 
 /* EX 12 */
-.ex-12-icon:hover {
-
+.ex-12-button:hover .ex-12-top-white {
+    animation: mistery-top 2s linear;
 }
 
-@keyframes partial-spin {
-    
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: mistery-bottom 2s linear;
+}
+
+@keyframes mistery-top {
+    0% {left: 10%;}
+    50% {left: calc(100% - 57px);}
+    100% {left: 10%;}
+}
+
+@keyframes mistery-bottom {
+    0% {right: 20%;}
+    50% {right: calc(100% - 57px);}
+    100% {right: 20%;}
 }
