--- a/my-solutions.css
+++ b/my-solutions.css
@@ -133,3 +133,34 @@ body {
     50% {right: calc(100% - 57px);}
     100% {right: 20%;}
 }
+
+/* EX 13 */
+.ex-13-button:hover .ex-13-top-white{
+    animation: lap-of-fear-1 5s linear infinite;
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: lap-of-fear-2 5s linear infinite;
+}
+
+@keyframes lap-of-fear-1 {
+    0% {left: 10%; top: -10px;}
+    25% {left: calc(100% - 30px); top: -10px;}
+    40% {left: calc(100% - 30px); top: calc(100% - 10px);}
+    65% {left: -30px; top: calc(100% - 10px);}
+    90% {left: -30px; top: -10px;}
+    100% {left: 10%; top: -10px;}
+}
+
+@keyframes lap-of-fear-2 {
+    0% {right: 20%; bottom: -10px;}
+    25% {right: calc(100% - 30px); bottom: -10px;}
+    40% {right: calc(100% - 30px); bottom: calc(100% - 10px);}
+    65% {right: -30px; bottom: calc(100% - 10px);}
+    90% {right: -30px; bottom: -10px;}
+    100% {right: 20%; bottom: -10px;}
+}
+
+.well {
+    overflow: hidden;
+}
